--- a/Intro-Section-With-Dropdown-Navigation/index.html
+++ b/Intro-Section-With-Dropdown-Navigation/index.html
@@ -473,7 +473,7 @@
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/mosElsh" target='_blank'>MosElsh</a>.
+        Coded by <a href="https://github.com/Em-ee24" target='_blank'>Em-ee24</a>.
     </div>
 
     <script>
