Fixed Transparent Button Color Bug

--- a/Blogr-Landing-Page/index.html
+++ b/Blogr-Landing-Page/index.html
@@ -202,6 +202,7 @@
         .transparent_button {
             margin-left: 0.5rem;
             background: transparent;
+            color: white;
             border: max(0.1vw, 1px) solid white;
         }
 
