Bug Fix Updated

--- a/Blogr-Landing-Page/index.html
+++ b/Blogr-Landing-Page/index.html
@@ -202,8 +202,12 @@
         .transparent_button {
             margin-left: 0.5rem;
             background: transparent;
-            color: white;
+            color: black;
             border: max(0.1vw, 1px) solid white;
+        }
+
+        .learn_more_button {
+            color: black;
         }
 
         .transparent_button:hover {
@@ -677,7 +681,7 @@
             </nav>
         </div>
 
-        <!-- Call-To-Action Wrapped Inside Header for the background to shw properly. -->
+        <!-- Call-To-Action Wrapped Inside Header for the background to show properly. -->
 
         <h1 class="section_title main_title">A modern publishing platform</h1>
         <span class="section_description main_description">Grow your audience and build your online brand</span>
