Added alt to all images

--- a/Blogr-Landing-Page/index.html
+++ b/Blogr-Landing-Page/index.html
@@ -99,7 +99,7 @@
     <header>
         <div class="top_menu_bar">
             <div class="header_logo_container">
-                <img src="./images/logo.svg" class="header_logo">
+                <img src="./images/logo.svg" class="header_logo" alt="Blogr Logo">
             </div>
 
             <!-- Desktop Navigation -->
@@ -109,7 +109,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_desktop_section_heading" heading_for="product_desktop" onclick="toggle_header_links_display(this)">Product</span>
-                            <img src="./images/icon-arrow-light.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-light.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="product_desktop_header_section_links_container desktop_header_links_container">
                             <div class="product_desktop_header_section_links desktop_header_links">
@@ -124,7 +124,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_desktop_section_heading" heading_for="company_desktop" onclick="toggle_header_links_display(this)">Company</span>
-                            <img src="./images/icon-arrow-light.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-light.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="company_desktop_header_section_links_container desktop_header_links_container">
                             <div class="company_desktop_header_section_links desktop_header_links">
@@ -138,7 +138,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_desktop_section_heading" heading_for="connect_desktop" onclick="toggle_header_links_display(this)">Connect</span>
-                            <img src="./images/icon-arrow-light.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-light.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="connect_desktop_header_section_links_container desktop_header_links_container">
                             <div class="connect_desktop_header_section_links desktop_header_links">
@@ -167,7 +167,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_mobile_section_heading" heading_for="product_mobile" onclick="toggle_header_links_display(this)">Product</span>
-                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="product_mobile_header_section_links_container mobile_header_links_container">
                             <div class="product_mobile_header_section_links mobile_header_links">
@@ -182,7 +182,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_mobile_section_heading" heading_for="company_mobile" onclick="toggle_header_links_display(this)">Company</span>
-                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="company_mobile_header_section_links_container mobile_header_links_container">
                             <div class="company_mobile_header_section_links mobile_header_links">
@@ -196,7 +196,7 @@
                     <div class="header_links_section">
                         <div class="text_arrow_combo_container">
                             <span class="header_mobile_section_heading" heading_for="connect_mobile" onclick="toggle_header_links_display(this)">Connect</span>
-                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow">
+                            <img src="./images/icon-arrow-dark.svg" class="icon_arrow" alt="arrow_down">
                         </div>
                         <div class="connect_mobile_header_section_links_container mobile_header_links_container">
                             <div class="connect_mobile_header_section_links mobile_header_links">
@@ -233,8 +233,8 @@
         <h2 class="section_title main_subtitle">Designed for the future</h2>
         <div class="paragraph_image_combo_container para_img_combo_1">
             <div class="illustration_image_container">
-                <img src="./images/illustration-editor-desktop.svg" class="desktop_illustration_image">
-                <img src="./images/illustration-editor-mobile.svg" class="mobile_illustration_image">
+                <img src="./images/illustration-editor-desktop.svg" class="desktop_illustration_image" alt="Editor Image">
+                <img src="./images/illustration-editor-mobile.svg" class="mobile_illustration_image" alt="Editor Image">
             </div>
             <div class="paragragh_container">
                 <div class="paragraph">
@@ -257,7 +257,7 @@
         </div>
         <div class="infrastrcuture_section_container paragraph_image_combo_container para_img_combo_2">
             <div class="illustration_image_container">
-                <img src="./images/illustration-phones.svg" class="illustration_phone_image">
+                <img src="./images/illustration-phones.svg" class="illustration_phone_image" alt="Phone Image">
             </div>
             <div class="paragraph_container">
                 <div class="paragraph infrastructure_paragraph">
@@ -289,8 +289,8 @@
                 </div>
             </div>
             <div class="illustration_image_container">
-                <img src="./images/illustration-laptop-desktop.svg" class="desktop_illustration_image">
-                <img src="./images/illustration-laptop-mobile.svg" class="mobile_illustration_image">
+                <img src="./images/illustration-laptop-desktop.svg" class="desktop_illustration_image" alt="Laptop Image">
+                <img src="./images/illustration-laptop-mobile.svg" class="mobile_illustration_image" alt="Laptop Image">
             </div>
         </div>
     </main>
@@ -298,7 +298,7 @@
     <footer>
         <div class="footer_container">
             <div class="footer_logo_container">
-                <img src="./images/logo.svg" class="footer_logo">
+                <img src="./images/logo.svg" class="footer_logo" alt="Blogr Logo">
             </div>
             <div class="footer_links_section">
                 <h3 class="footer_links_heading">Product</h3>
