Pictures made more responsive

--- a/Sunnyside-Agency-Landing-Page/index.html
+++ b/Sunnyside-Agency-Landing-Page/index.html
@@ -165,6 +165,7 @@
 
         .section_1 .image_container {
             min-width: 50vw;
+            min-height: 75vh;
             background-image: url(./images/desktop/image-transform.jpg);
             background-color: hsl(51, 100%, 49%);
             background-position: center;
@@ -174,6 +175,7 @@
 
         .section_2 .image_container {
             min-width: 50vw;
+            min-height: 75vh;
             background-color: hsl(7, 99%, 70%);
             background-image: url(./images/mobile/image-stand-out.jpg);
             background-position: center;
@@ -183,6 +185,7 @@
 
         .section_3 .image_container {
             min-width: 50vw;
+            min-height: 75vh;
             background-image: url(./images/desktop/image-graphic-design.jpg);
             background-color: rgb(133, 223, 208);
             background-position: top;
@@ -192,6 +195,7 @@
 
         .section_4, .image_container {
             min-width: 50vw;
+            min-height: 75vh;
             background-image: url(./images/desktop/image-photography.jpg);
             background-color: rgb(64, 204, 255);
             background-position: top;
