Fixed Tick Icon Not Showing

--- a/Crowdfunding-Project-Page/index.html
+++ b/Crowdfunding-Project-Page/index.html
@@ -270,6 +270,8 @@
         </div>
     </div>
 
+    <img src="./images/icon-check.svg" style="display: none;" class="green_tick">
+
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
