Added Alts to Images

--- a/Testimonials-Grid-Section/index.html
+++ b/Testimonials-Grid-Section/index.html
@@ -72,7 +72,7 @@
         <div class="testimonials_grid">
             <div class="testimonial testimonial_1 purple_background">
                 <div class="profile">
-                    <img src="./images/image-daniel.jpg" class="profile_img">
+                    <img src="./images/image-daniel.jpg" class="profile_img" alt="Daniel's Profile Picture">
                     <span class="name">Daniel Clifford</span>
                     <span class="role">Verified Graduate</span>
                 </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="testimonial testimonial_2 grey_background">
                 <div class="profile">
-                    <img src="./images/image-jonathan.jpg" class="profile_img">
+                    <img src="./images/image-jonathan.jpg" class="profile_img" alt="Jonathan's Profile Picture">
                     <span class="name">Jonathan Walters</span>
                     <span class="role">Verified Graduate</span>
                 </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="testimonial testimonial_3 white_background">
                 <div class="profile">
-                    <img src="./images/image-jeanette.jpg" class="profile_img">
+                    <img src="./images/image-jeanette.jpg" class="profile_img" alt="Jeanette's Profile Picture">
                     <span class="name">Jeanette Harrison</span>
                     <span class="role">Verified Graduate</span>
                 </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="testimonial testimonial_4 black_background">
                 <div class="profile">
-                    <img src="./images/image-patrick.jpg" class="profile_img">
+                    <img src="./images/image-patrick.jpg" class="profile_img" alt="Patrick's Profile Picture">
                     <span class="name">Patrick Abrams</span>
                     <span class="role">Verified Graduate</span>
                 </div>
@@ -151,7 +151,7 @@
             </div>
             <div class="testimonial testimonial_5 white_background">
                 <div class="profile">
-                    <img src="./images/image-kira.jpg" class="profile_img">
+                    <img src="./images/image-kira.jpg" class="profile_img" alt="Kira's Profile Picture">
                     <span class="name">Kira Whittle</span>
                     <span class="role">Verified Graduate</span>
                 </div>
