--- a/Testimonials-Grid-Section/index.html
+++ b/Testimonials-Grid-Section/index.html
@@ -127,7 +127,7 @@
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="https://github.com/Em-ee24" target="_blank">Em-ee24</a>.
+            Coded by <a href="https://github.com/MosElsh" target="_blank">MosElsh</a>.
         </div>
     </footer>
 </body>
